--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -38,13 +38,73 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   loan_size  interest_rate  borrower_income  debt_to_income  num_of_accounts  \\\n",
+      "0    10700.0          7.672            52800        0.431818                5   \n",
+      "1     8400.0          6.692            43600        0.311927                3   \n",
+      "2     9000.0          6.963            46100        0.349241                3   \n",
+      "3    10700.0          7.664            52700        0.430740                5   \n",
+      "4    10800.0          7.698            53000        0.433962                5   \n",
+      "\n",
+      "   derogatory_marks  total_debt  loan_status  \n",
+      "0                 1       22800            0  \n",
+      "1                 0       13600            0  \n",
+      "2                 0       16100            0  \n",
+      "3                 1       22700            0  \n",
+      "4                 1       23000            0  \n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 77536 entries, 0 to 77535\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   loan_size         77536 non-null  float64\n",
+      " 1   interest_rate     77536 non-null  float64\n",
+      " 2   borrower_income   77536 non-null  int64  \n",
+      " 3   debt_to_income    77536 non-null  float64\n",
+      " 4   num_of_accounts   77536 non-null  int64  \n",
+      " 5   derogatory_marks  77536 non-null  int64  \n",
+      " 6   total_debt        77536 non-null  int64  \n",
+      " 7   loan_status       77536 non-null  int64  \n",
+      "dtypes: float64(3), int64(5)\n",
+      "memory usage: 4.7 MB\n",
+      "None\n",
+      "          loan_size  interest_rate  borrower_income  debt_to_income  \\\n",
+      "count  77536.000000   77536.000000     77536.000000    77536.000000   \n",
+      "mean    9805.562577       7.292333     49221.949804        0.377318   \n",
+      "std     2093.223153       0.889495      8371.635077        0.081519   \n",
+      "min     5000.000000       5.250000     30000.000000        0.000000   \n",
+      "25%     8700.000000       6.825000     44800.000000        0.330357   \n",
+      "50%     9500.000000       7.172000     48100.000000        0.376299   \n",
+      "75%    10400.000000       7.528000     51400.000000        0.416342   \n",
+      "max    23800.000000      13.235000    105200.000000        0.714829   \n",
+      "\n",
+      "       num_of_accounts  derogatory_marks    total_debt   loan_status  \n",
+      "count     77536.000000      77536.000000  77536.000000  77536.000000  \n",
+      "mean          3.826610          0.392308  19221.949804      0.032243  \n",
+      "std           1.904426          0.582086   8371.635077      0.176646  \n",
+      "min           0.000000          0.000000      0.000000      0.000000  \n",
+      "25%           3.000000          0.000000  14800.000000      0.000000  \n",
+      "50%           4.000000          0.000000  18100.000000      0.000000  \n",
+      "75%           4.000000          1.000000  21400.000000      0.000000  \n",
+      "max          16.000000          3.000000  75200.000000      1.000000  \n"
+     ]
+    }
+   ],
    "source": [
     "# Read the CSV file from the Resources folder into a Pandas DataFrame\n",
-    "# YOUR CODE HERE!\n",
+    "csv_file_path = Path(\"Resources/lending_data.csv\")\n",
+    "\n",
+    "# Read the CSV \n",
+    "data = pd.read_csv(csv_file_path)\n",
     "\n",
     "# Review the DataFrame\n",
-    "# YOUR CODE HERE!"
+    "print(data.head())  \n",
+    "print(data.info())  \n",
+    "print(data.describe())"
    ]
   },
   {
@@ -63,30 +123,120 @@
     "# Separate the data into labels and features\n",
     "\n",
     "# Separate the y variable, the labels\n",
-    "# YOUR CODE HERE!]\n",
+    "y = data[\"loan_status\"]\n",
     "\n",
     "# Separate the X variable, the features\n",
-    "# YOUR CODE HERE!"
+    "X = data.drop(columns=[\"loan_status\"])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    0\n",
+      "1    0\n",
+      "2    0\n",
+      "3    0\n",
+      "4    0\n",
+      "Name: loan_status, dtype: int64\n",
+      "[0 1]\n",
+      "count    77536.000000\n",
+      "mean         0.032243\n",
+      "std          0.176646\n",
+      "min          0.000000\n",
+      "25%          0.000000\n",
+      "50%          0.000000\n",
+      "75%          0.000000\n",
+      "max          1.000000\n",
+      "Name: loan_status, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "# Review the y variable Series\n",
-    "# YOUR CODE HERE!"
+    "print(y.head())\n",
+    "print(y.unique())\n",
+    "print(y.describe())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   loan_size  interest_rate  borrower_income  debt_to_income  num_of_accounts  \\\n",
+      "0    10700.0          7.672            52800        0.431818                5   \n",
+      "1     8400.0          6.692            43600        0.311927                3   \n",
+      "2     9000.0          6.963            46100        0.349241                3   \n",
+      "3    10700.0          7.664            52700        0.430740                5   \n",
+      "4    10800.0          7.698            53000        0.433962                5   \n",
+      "\n",
+      "   derogatory_marks  total_debt  \n",
+      "0                 1       22800  \n",
+      "1                 0       13600  \n",
+      "2                 0       16100  \n",
+      "3                 1       22700  \n",
+      "4                 1       23000  \n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 77536 entries, 0 to 77535\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   loan_size         77536 non-null  float64\n",
+      " 1   interest_rate     77536 non-null  float64\n",
+      " 2   borrower_income   77536 non-null  int64  \n",
+      " 3   debt_to_income    77536 non-null  float64\n",
+      " 4   num_of_accounts   77536 non-null  int64  \n",
+      " 5   derogatory_marks  77536 non-null  int64  \n",
+      " 6   total_debt        77536 non-null  int64  \n",
+      "dtypes: float64(3), int64(4)\n",
+      "memory usage: 4.1 MB\n",
+      "None\n",
+      "          loan_size  interest_rate  borrower_income  debt_to_income  \\\n",
+      "count  77536.000000   77536.000000     77536.000000    77536.000000   \n",
+      "mean    9805.562577       7.292333     49221.949804        0.377318   \n",
+      "std     2093.223153       0.889495      8371.635077        0.081519   \n",
+      "min     5000.000000       5.250000     30000.000000        0.000000   \n",
+      "25%     8700.000000       6.825000     44800.000000        0.330357   \n",
+      "50%     9500.000000       7.172000     48100.000000        0.376299   \n",
+      "75%    10400.000000       7.528000     51400.000000        0.416342   \n",
+      "max    23800.000000      13.235000    105200.000000        0.714829   \n",
+      "\n",
+      "       num_of_accounts  derogatory_marks    total_debt  \n",
+      "count     77536.000000      77536.000000  77536.000000  \n",
+      "mean          3.826610          0.392308  19221.949804  \n",
+      "std           1.904426          0.582086   8371.635077  \n",
+      "min           0.000000          0.000000      0.000000  \n",
+      "25%           3.000000          0.000000  14800.000000  \n",
+      "50%           4.000000          0.000000  18100.000000  \n",
+      "75%           4.000000          1.000000  21400.000000  \n",
+      "max          16.000000          3.000000  75200.000000  \n",
+      "loan_size           0\n",
+      "interest_rate       0\n",
+      "borrower_income     0\n",
+      "debt_to_income      0\n",
+      "num_of_accounts     0\n",
+      "derogatory_marks    0\n",
+      "total_debt          0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "# Review the X variable DataFrame\n",
-    "# YOUR CODE HERE!"
+    "print(X.head())\n",
+    "print(X.info())\n",
+    "print(X.describe())\n",
+    "print(X.isnull().sum())"
    ]
   },
   {
@@ -100,10 +250,24 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Balance of Target Values:\n",
+      "0    75036\n",
+      "1     2500\n",
+      "Name: loan_status, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "# Check the balance of our target values\n",
-    "# YOUR CODE HERE!"
+    "target_balance = y.value_counts()\n",
+    "\n",
+    "print(\"Balance of Target Values:\")\n",
+    "print(target_balance)"
    ]
   },
   {
@@ -124,7 +288,7 @@
     "\n",
     "# Split the data using train_test_split\n",
     "# Assign a random_state of 1 to the function\n",
-    "# YOUR CODE HERE!"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1)\n"
    ]
   },
   {
@@ -152,17 +316,31 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression(random_state=1)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LogisticRegression</label><div class=\"sk-toggleable__content\"><pre>LogisticRegression(random_state=1)</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "LogisticRegression(random_state=1)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Import the LogisticRegression module from SKLearn\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "# Instantiate the Logistic Regression model\n",
     "# Assign a random_state parameter of 1 to the model\n",
-    "# YOUR CODE HERE!\n",
+    "model = LogisticRegression(random_state=1)\n",
     "\n",
     "# Fit the model using training data\n",
-    "# YOUR CODE HERE!"
+    "model.fit(X_train, y_train)\n"
    ]
   },
   {
@@ -179,7 +357,7 @@
    "outputs": [],
    "source": [
     "# Make a prediction using the testing data\n",
-    "# YOUR CODE HERE!"
+    "y_pred = model.predict(X_test)"
    ]
   },
   {
@@ -199,30 +377,70 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Balanced Accuracy Score: 0.9521352751368186\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the balanced_accuracy score of the model\n",
-    "# YOUR CODE HERE!"
+    "balanced_accuracy = balanced_accuracy_score(y_test, y_pred)\n",
+    "print(\"Balanced Accuracy Score:\", balanced_accuracy)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix:\n",
+      "[[14926    75]\n",
+      " [   46   461]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Generate a confusion matrix for the model\n",
-    "# YOUR CODE HERE!"
+    "confusion = confusion_matrix(y_test, y_pred)\n",
+    "print(\"Confusion Matrix:\")\n",
+    "print(confusion)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00     15001\n",
+      "           1       0.86      0.91      0.88       507\n",
+      "\n",
+      "    accuracy                           0.99     15508\n",
+      "   macro avg       0.93      0.95      0.94     15508\n",
+      "weighted avg       0.99      0.99      0.99     15508\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the classification report for the model\n",
-    "# YOUR CODE HERE!"
+    "report = classification_report(y_test, y_pred)\n",
+    "print(\"Classification Report:\")\n",
+    "print(report)"
    ]
   },
   {
@@ -238,7 +456,14 @@
    "source": [
     "**Question:** How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** WRITE YOUR ANSWER HERE!"
+    "**Answer:** \n",
+    "Healthy Loan (Label 0):\n",
+    "The model's performance for healthy loans is exceptional, with a precision of 1.00, recall of 1.00, and F1-score of 1.00. This means that it almost perfectly identifies and classifies loans that are truly healthy as \"0.\"\n",
+    "\n",
+    "High-Risk Loan (Label 1):\n",
+    "The model's performance for high-risk loans is also strong, with a precision of 0.86, recall of 0.91, and F1-score of 0.88. This indicates that the model effectively identifies high-risk loans, with a good balance between precision (minimizing false alarms) and recall (minimizing missed high-risk loans).\n",
+    "\n",
+    "In summary, the logistic regression model exhibits excellent predictive performance for both labels. It accurately identifies healthy loans and maintains a strong balance between precision and recall when identifying high-risk loans. This balanced performance makes it a valuable tool for assessing credit risk, as it can effectively categorize loans into their respective risk categories."
    ]
   },
   {
@@ -387,9 +612,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PythonData",
+   "display_name": "dev",
    "language": "python",
-   "name": "pythondata"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -401,12 +626,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
-   }
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
